--- a/assets/style.css
+++ b/assets/style.css
@@ -190,13 +190,19 @@ h1 {
   position: relative;
   width: 100%;
 }
-.restaurants-card a {
+.restaurants-card .link {
   text-decoration: none;
   background-color: #ffffff;
   width: 100%;
   border-radius: 15px;
   box-shadow: 0px 4px 15px 0px #0000001a;
   color: inherit;
+}
+
+.restaurants-card a {
+  display: block;
+  width: 100%;
+  height: 124px;
 }
 
 .restaurant-card img {
@@ -646,7 +652,7 @@ h3 {
   .restaurant-card {
     width: 450px;
   }
-  .restaurants-card a {
+  .restaurants-card .link {
     width: 450px;
   }
   .rectangle {
